--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "align-text": "^1.0.2",
     "axios": "^0.19.0",
+    "colors": "^1.3.3",
     "puppeteer": "^1.19.0"
   }
 }
